<resources>
    <string name="app_name">Baby Needs</string>
    <string name="settings">Settings</string>
    <string name="add_items">Add items</string>
    <string name="add_item">Add Item</string>
    <string name="quantity">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="name">name</string>
    <string name="save">save</string>
    <string name="date">date</string>
</resources>