<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:backgroundTint="@color/baby_needs_primary_dark"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">
            <TextView
                android:id="@+id/textView_recycleItem_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/textView_recycleItem_quantity"
                android:layout_below="@+id/textView_recycleItem_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="4dp"
                android:text="@string/quantity"/>
            <TextView
                android:id="@+id/textView_recycleItem_color"
                android:layout_below="@+id/textView_recycleItem_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="4dp"
                android:text="@string/color"/>
            <TextView
                android:id="@+id/textView_recycleItem_size"
                android:layout_below="@+id/textView_recycleItem_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="4dp"
                android:text="@string/size"/>
            <TextView
                android:id="@+id/textView_recycleItem_date"
                android:layout_below="@+id/textView_recycleItem_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="4dp"
                android:text="@string/date"/>
            <TableRow
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView_recycleItem_date">

                <ImageButton
                    android:id="@+id/button_recycleItem_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:src="@android:drawable/ic_menu_edit"/>
                <ImageButton
                    android:id="@+id/button_recycleItem_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:src="@android:drawable/ic_delete"/>
            </TableRow>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>